# scratchpad

paper_reader/: .gitignore  README.md  config.example.toml  config.toml  environment.yml  pyproject.toml
paper_reader/deploy/: paper_reader.cron
paper_reader/reports/: 2026-03-19.md
paper_reader/reports/papers/2026-03-19/: ace-lora-graph-attentive-context-enhancement-for-parameter-efficient-adaptation.docx  arxiv-2603-13398.md  arxiv-2603-17808.md  arxiv-2603-17995.md  complementary-reinforcement-learning.docx  eva-aligning-video-world-models-with-executable-robot-actions-via-inverse-dynami.docx  gigaworld-policy-an-efficient-action-centered-world-action-model.docx  lost-level-of-semantics-tokenization-for-3d-shapes.docx  mosaicmem-hybrid-spatial-memory-for-controllable-video-world-models.docx  qianfan-ocr-a-unified-end-to-end-model-for-document-intelligence.docx  temporal-gains-spatial-costs-revisiting-video-fine-tuning-in-multimodal-large-la.docx  when-ai-navigates-the-fog-of-war.docx
paper_reader/scripts/: install_cron.sh
paper_reader/src/paper_reader/: analysis.py  arxiv_client.py  config.py  docx_report.py  hf_client.py  http.py  main.py  metadata.py  papers.py  pdf_report.py  ranking.py  reporting.py  storage.py
paper_reader/tests/: test_arxiv_client.py  test_main.py  test_metadata.py  test_papers.py  test_ranking.py
